# lidar_analysis

./: .gitignore  AGENTS.md  PIPELINE_ARCHITECTURE_NOTE.md  POINTCLOUD_OPS_NOTE.md  README.md  experiment_config.yaml
cpp_ops/: CMakeLists.txt  README.md
cpp_ops/src/: csv_io.cpp  csv_io.hpp  pcl_pointcloud_ops.cpp
docs/: CLOUDCOMPARE.md  CLOUDCOMPARE_GUIDE.md  CODE_WALKTHROUGH.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  CONTRIBUTING_GUIDE.md  HOW_TO_RUN_ANALYSIS.md  MANAGER_SUMMARY.md  OVERVIEW.md  README_OVERVIEW.md  RUNNING_THE_PIPELINE.md  TESTING_AND_EXPERIMENT_PLAN.md  TESTING_AND_VALIDATION.md  TROUBLESHOOTING.md
lidar_analysis/: __init__.py  analysis_target.py  beam_diagnostics.py  central_runner.py  central_watcher.py  config.py  fad.py  fusion.py  fusion_imu_interp.py  fusion_pps.py  io_utils.py  lai.py  local_run.py  mark_splitting.py  o3d_backend.py  orchestrator.py  pipeline_core.py  pipeline_stages.py  pointcloud_ops.py  results_manager.py  run_experiment_date.py  run_manifest.py  scaffold_experiments.py  test_additional_scan_side_split.py  test_fusion_imu_interp_smoke.py  test_mark_splitting_smoke.py  test_marker_reference_points_smoke.py  test_pointcloud_ops_smoke.py  test_splitting_style_smoke.py  topology.py  yaml_loader.py
scripts/: compare_rssi_norm_csvs.py  convert_pico_folder_rename_reorder.py  plot_pcl_summary.py  smoke_markers_example.py
tests/: test_config_defaults.py  test_fad.py  test_lai_mta_toggle.py  test_pipeline_fad_smoke.py  test_pointcloud_ops_smoke.py  test_run_experiment_date_wrapper.py  test_topology_ops.py
(+19 files in other folders)
